--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COMP2521 Lecture 1</title>
+    <title>PotatoServer3500 offical site</title>
     <meta name="description" content="">
     <meta property="og:title" content="COMP2521 Lecture 1" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mattlau1.github.io/jas/" />
     <meta property="og:image" content="https://mattlau1.github.io/jas/jas.png" />
-    <meta property="og:description" content="COMP2521 - Data Structures and Algorithms Lecture 1" />
+    <meta property="og:description" content="Offical PotatoServer35000 site" />
     <meta name="theme-color" content="#000000">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="viewport" content="width=device-width, initial-scale=1">
