--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PotatoServer3500 offical site</title>
     <meta name="description" content="">
-    <meta property="og:title" content="COMP2521 Lecture 1" />
+    <meta property="og:title" content="PotatoServer3500 offical site" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://mattlau1.github.io/jas/jas.png" />
     <meta property="og:description" content="Offical PotatoServer35000 site" />
