--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PotatoServer3500 offical site</title>
+    <title>not jumpscare</title>
     <meta name="description" content="">
-    <meta property="og:title" content="PotatoServer3500 offical site" />
+    <meta property="og:title" content="not jumpscare" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://mattlau1.github.io/jas/jas.png" />
-    <meta property="og:description" content="Offical PotatoServer35000 site" />
+    <meta property="og:description" content="not jumpscare" />
     <meta name="theme-color" content="#000000">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div id="black"><button id="enter">Click to Enter Site</button></div>
+    <div id="black"><button id="enter">Click to Enter not jumpscare Site</button></div>
     <img id="jas" src="jas.png">
 
     <audio id="music" src="sound.mp3" autoplay loop muted></audio>
